@@ -46,6 +46,7 @@ Changed
 - The `yank` command gained a new `inline` argument, which allows to e.g. use
   `:yank inline [{title}]({url})`.
 - Duplicate consecutive history entries with the same URL are now ignored.
+- More detailed error messages when spawning a process failed.
 
 Deprecated
 ~~~~~~~~~~
